--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -5,20 +5,15 @@
 		"files": ["./**/*.scss", "./**/*.js", "./**/*.php"]
 	},
 	"paths": {
-		"js": ".",
+		"js": "./js",
 		"css": ".",
-		"fonts": "./fonts",
-		"img": "./assets/img",
-		"imgsrc": "./assets/img",
+		"imgSrc": "./assets/img",		
 		"sass": "./sass",
-		"node": "./node_modules",
-		"composer": "./vendor",
-        "dev": "./src",
-        "assets": "./assets",
-		"dist": "./dist",
+		"scss": "./assets/scss",
 		"distprod": "./dist-product",
 		"host": "HOST FTP ADDRESS",
 		"user": "USERNAME",
-		"password": "PASSWORD"
+		"password": "PASSWORD",
+		"hostDir": "/public_html/wp-content/themes/cmcm_2020_v1"
 	}
 }
